src-tauri/last_build_error.txt
cargo :    Compiling corex 
v0.1.0 (E:\ai-desktop\local
-ai\src-tauri)
At line:1 char:1
+ cargo build 2>&1 | Out-Fi
le -FilePath last_build_err
or.txt -Encoding  ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: (     
  Compiling co...l-ai\sr   
 c-tauri):String) [], R    
emoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
warning: use of deprecated 
enum `llama_cpp_2::model::S
pecial`: This enum is a mix
ture of options for llama c
pp providing less flexibili
ty it only used with deprec
ated methods and will be re
moved in the future.
   --> src\gguf.rs:433:65
    |
433 |         match model.t
oken_to_str(*token_id, llam
a_cpp_2::model::Special::No
ne) {
    |                      
                           
                ^^^^^^^
    |
    = note: `#[warn(depreca
ted)]` on by default

warning: use of deprecated 
method `llama_cpp_2::model:
:LlamaModel::token_to_str`:
 Use `token_to_piece` inste
ad
   --> src\gguf.rs:433:21
    |
433 |         match model.t
oken_to_str(*token_id, llam
a_cpp_2::model::Special::No
ne) {
    |                     ^
^^^^^^^^^^^

error[E0599]: no variant or
 associated item named `Non
e` found for enum `Special`
 in the current scope
   --> src\gguf.rs:433:74
    |
433 |         match model.t
oken_to_str(*token_id, llam
a_cpp_2::model::Special::No
ne) {
    |                      
                           
                         ^^
^^ variant or associated it
em not found in `Special`
    |
help: there is a method `ne
` with a similar name
   --> C:\Users\pc\.rustup\
toolchains\stable-x86_64-pc
-windows-msvc\lib/rustlib/s
rc/rust\library\core\src\cm
p.rs:264:5
    |
264 |     fn ne(&self, othe
r: &Rhs) -> bool {
    |     ^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^

For more information about 
this error, try `rustc --ex
plain E0599`.
warning: `corex` (lib) gene
rated 2 warnings
error: could not compile `c
orex` (lib) due to 1 previo
us error; 2 warnings emitte
d
